# facturen-app

./: .gitignore  README.md  database.py  facturen.db  initialSetUp.sql  mailing.py  main.py  pyproject.toml
routes/: admin.py  facturen.py  home.py
scripts/: import_old_facturen.py
services/: mail_service.py  pdf_generator_service.py
templates/: admin.html  base.html  index.html  result.html
templates/admin/: SQL_console.html  betalingen.html  nieuwe_klant.html  overview.html
templates/facturen/: facturen.html  sendmail.html
templates/home/: index.html
